# rust-block-game

./: .gitmodules  Cargo.toml
res/shaders/: shader.wgsl
src/: lib.rs  main.rs
src/core/: app.rs  constants.rs  mod.rs  resource.rs
src/player/: camera.rs  mod.rs
src/render/: block.rs  mod.rs  state.rs  texture.rs  traits.rs  types.rs
src/world/: mesher.rs  mod.rs
