[package]
name = "rust_block_game"
version = "0.1.0"
edition = "2021"

[lib]
name = "librust_block_game"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
winit = "0.26"
log = "0.4"
pollster = "0.2"
anyhow = "1.0"
wgpu = "0.12"
block-mesh = "0.1"
bytemuck = { version = "1.4", features = [ "derive" ] }
rayon = "1.5"
image = "0.23"
cgmath = "0.18"
